--- a/CharlaReCaptcha/appsettings.json
+++ b/CharlaReCaptcha/appsettings.json
@@ -6,8 +6,8 @@
         }
     },
     "reCAPTCHA": {
-        "SiteKey": "6Lc4ePcqAAAAAErS8INJnyEbwE1VCL9WRD1PbY-p",
-        "SecretKey": "6Lc4ePcqAAAAADimA2nytG_Bb9GtSdYEW0X01-wY"
+        "SiteKey": "TU_SITE_KEY",
+        "SecretKey": "TU_SECRET_KEY"
     },
     "AllowedHosts": "*"
 }
